# promillezone

./: .env.example  Makefile  README.md  deploy.sh  docker-compose.yml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml  publish-and-deploy.yml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  deploy.sh  diesel.toml  docker-compose.yml
backend/diesel/migrations/2025-11-08-232038-0000_create_users/: up.sql
backend/diesel/migrations/2025-11-09-190248-0000_more_user_fields/: up.sql
backend/diesel/migrations/2025-11-09-193958-0000_rename_users_table/: down.sql  up.sql
backend/diesel/migrations/2025-11-09-201108-0000_households/: down.sql  up.sql
backend/diesel/migrations/2025-11-09-202430-0000_add_timezone_type/: down.sql  up.sql
backend/diesel/migrations/2025-11-09-203453-0000_auto_uuid_households/: down.sql  up.sql
backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251109_224906_create_households.rs  m20251110_200238_add_household_fields.rs  m20251110_215513_add_household_invite_code.rs  m20251110_222040_add_account_verification.rs  m20251110_225922_add_profile_verification_code.rs  m20251117_153027_remove_email_verification.rs  m20251210_220518_add_coords_to_household.rs  m20251211_222345_create_chores.rs
backend/migrations/2025-11-08-152541-0000_create_user/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/entity/: chore_tasks.rs  chores.rs  household_invite_codes.rs  households.rs  mod.rs  prelude.rs  profile_verification_codes.rs  profiles.rs  sea_orm_active_enums.rs
backend/src/handlers/: auth.rs  content.rs  fun.rs  household.rs  mod.rs  profile.rs  user.rs
backend/src/lib/: kanye_quotes.json  mod.rs  uri_paths.rs  wisdom.rs
backend/src/middleware/: auth.rs  firebase_auth.rs  household.rs  mod.rs
backend/src/model/: auth.rs  error.rs  mod.rs  user.rs
backend/src/model/api/: error.rs  household.rs  mod.rs  profile.rs  response.rs
backend/src/model/diesel/: households.rs  mod.rs  profile.rs
backend/src/model/dto/: error.rs  mod.rs
backend/src/model/dto/content/: response.rs
backend/src/model/dto/error/: bad_request.rs  email_not_verified.rs  internal_server_error.rs  invalid_household_invite_code.rs  mod.rs  no_household.rs  no_user_profile.rs  profile_already_exists.rs  unauthorized.rs  user_already_in_household.rs
backend/src/model/dto/fun/: response.rs
backend/src/model/dto/household/: enums.rs  mod.rs  request.rs  response.rs
backend/src/model/dto/profile/: request.rs  response.rs
backend/src/repository/: wisdom.rs
backend/src/utils/: firebase_auth.rs  jwt.rs  mod.rs  openapi.rs  resend.rs  uri_paths.rs
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile.pi  Makefile  README.md  firebase.json  openapi.json  pubspec.yaml
frontend/lib/: constant.dart  firebase_options.dart  main.dart  provider.dart  route.dart
frontend/linux/: CMakeLists.txt
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
prisma/: schema.prisma
src/: env.js
(+147 files in other folders)
