[package]
name = "promillezone"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.3", features = ["chrono", "postgres", "uuid"] }
diesel-async = { version = "0.7.4", features = ["postgres", "deadpool"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lazy_static = "1.5.0"
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
