[package]
name = "promillezone"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
sea-orm = { version = "1.1.0", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "with-chrono",
  "with-uuid",
] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
resend-rs = "0.19.0"
rand = "0.9.2"
validator = { version = "0.20.0", features = ["derive"] }
